<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">Invalid email</string>
    <string name="must_fill">Tidak boleh kosong!</string>
    <string name="welcome_back">Selamat Datang Kembali!</string>
    <string name="login_success">"Login berhasil!"</string>
    <string name="logout_success">"Logout berhasil!"</string>
    <string name="login_failed">"Gagal login"</string>
    <string name="upload_success">Upload berhasil!</string>
    <string name="upload_failed">Gagal upload</string>
    <string name="continue_">Lanjut</string>
    <string name="information">Informasi</string>
    <string name="get_started">Silahkan Login terlebih dahulu untuk menggunakan Aplikasi!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="message_dh">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="welcomeTo">Selamat Datang!</string>
    <string name="message_fill">Silahkan isi data kamu dibawah ini!</string>
    <string name="name">Nama</string>
    <string name="message_h">Sudah punya akun?</string>
    <string name="login_">Login</string>
    <string name="gambar">Gambar</string>
    <string name="tambah">Tambah</string>
    <string name="hint_desc">Deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="input_email">Masukkan Email</string>
    <string name="input_password">Masukkan Password!</string>
    <string name="input_name">Masukkan Nama</string>
    <string name="regist_success">Registrasi berhasil</string>
    <string name="regist_failed">Registrasi gagal</string>
    <string name="developer">© 2022 M. Aldhika Yandaputra</string>
    <string name="log_out">Log Out</string>
    <string name="no_data">Tidak ada cerita</string>
    <string name="retry">Coba ulang</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="err_occ">Error</string>
    <string name="maps">Maps</string>
    <string name="error_msg">Terjadi kesalahan</string>
    <string name="created_at">Dibuat pada %1$s</string>
</resources>