<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_img_place_holder"
        android:contentDescription="@string/gambar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:text="@string/camera"
        android:translationZ="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_preview" />

    <Button
        android:id="@+id/btn_gallery"
        android:text="@string/gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:translationZ="0dp"
        app:layout_constraintTop_toBottomOf="@id/iv_preview"
        app:layout_constraintTop_toTopOf="@id/btn_camera"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"/>

    <EditText
        android:id="@+id/edtStoryDesc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:padding="16dp"
        android:inputType="textMultiLine"
        android:hint="@string/hint_desc"
        android:gravity="top|start"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="8dp"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>